# ml_research_station

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  openai-agents.md  pyproject.toml
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  styles.css  vite.config.ts
frontend/src/: api.ts  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: AgentPanel.tsx  ApiConfigModal.tsx  App.tsx  BottomChat.tsx  CenterStage.tsx  CitationGraph.tsx  Explainer.tsx  Features.tsx  IngestModal.tsx  LeftRail.tsx  Library.tsx  PaperReader.tsx  Prompts.tsx  RightRail.tsx  ToolPills.tsx  UsageModal.tsx
scripts/: ocr_batch.py  serve.sh
src/research_station/: __init__.py  cli.py
src/research_station/api/: agent_loop.py  agent_tools.py  app.py  background.py  deps.py  jobs.py  schemas.py
src/research_station/api/routes/: chat.py  export.py  extras.py  graph.py  ingest.py  papers.py  processing.py  reader.py  search.py  system.py  users.py  watches.py  web.py
src/research_station/config/: settings.py
src/research_station/database/: __init__.py  engine.py  repository.py
src/research_station/ingestion/: __init__.py  arxiv_fetcher.py  base.py  biorxiv_fetcher.py  openalex_enricher.py  openreview_fetcher.py  pdf_downloader.py  pipeline.py  pubmed_fetcher.py  semantic_scholar.py  wikipedia_fetcher.py
src/research_station/models/: __init__.py  entity.py  paper.py  paper_view.py  summary.py  taxonomy.py  token_usage.py  traversal.py  user.py  web_link.py
src/research_station/processing/: __init__.py  embedding_service.py  entity_extractor.py  pdf_ocr.py  prompts.py  summarizer.py  web_ingest.py
src/research_station/processing/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama.py  openai_compat.py  usage.py
src/research_station/prompts/: MERIDIAN.md  agent_system.md  chat_system.md  discover.md  edge_classify.md  entity_extract.md  general_system.md  ocr_page.md  summarizer_system.md  summarizer_user.md
src/research_station/prompts/agents/: analysis.md  knowledge.md  processing.md
src/research_station/prompts/skills/: dashboard_style.md  graph_traversal.md  processing_guidance.md
tests/: conftest.py
tests/ingestion/: test_arxiv_fetcher.py
tests/processing/: test_summarizer.py
