[project]
name = "research-station"
version = "0.3.0"
description = "ML/DL paper ingestion, knowledge graph, and interactive research dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Paper sources
    "arxiv>=2.1.0",
    "openreview-py>=1.14.0",
    # HTTP
    "httpx>=0.27.0",
    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy>=2.0.30",
    # Resilience
    "tenacity>=8.3.0",
    # CLI & terminal UI
    "rich>=13.7.0",
    "typer>=0.12.3",
    # Async file I/O
    "aiofiles>=23.2.1",
    # Vector store for semantic similarity
    "chromadb>=0.5.3",
    # Dimensionality reduction for graph layout
    "umap-learn>=0.5.0",
]

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.24.5",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
llm = [
    "anthropic>=0.28.0",
    "openai>=2.0.0",
    "openai-agents>=0.14.0",
    "fastmcp>=2.0.0",
    "rank-bm25>=0.2.2",
]
web = [
    "playwright>=1.44.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "bandit[toml]>=1.8.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
rs-ingest = "research_station.cli:app"
rs-serve = "research_station.api.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_station"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "RUF"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
# Deferred imports are intentional (optional heavy dependencies)
"src/research_station/api/agent_tools.py" = ["E402", "E741", "RUF001", "RUF002", "RUF003", "B905"]
"src/research_station/api/routes/ingest.py" = ["E402", "B904"]
"src/research_station/api/routes/chat.py" = ["E741", "RUF005"]
"src/research_station/api/routes/web.py" = ["B904"]
"src/research_station/api/agent_loop.py" = ["RUF005"]
"src/research_station/cli.py" = ["B904"]
"src/research_station/config/settings.py" = ["RUF001"]
"src/research_station/ingestion/pubmed_fetcher.py" = ["RUF001"]
"src/research_station/models/taxonomy.py" = ["RUF002"]
"src/research_station/processing/embedding_service.py" = ["B905", "F841"]
"src/research_station/processing/pdf_ocr.py" = ["RUF003", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["research_station"]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Bandit ──────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]
skips = [
    "B101",  # assert — fine in tests
    "B110",  # try/except/pass — intentional resilience
    "B311",  # random — graph sampling, not crypto
    "B310",  # urlopen — internal localhost API only
    "B105",  # hardcoded_password_string — false positive (literal "0")
    "B404",  # subprocess import — intentional in execute_python tool
    "B603",  # subprocess without shell — intentional, controlled input
    "B104",  # bind all interfaces — intentional for dev server
    "B405",  # xml.etree import — PubMed XML is from trusted NCBI API
    "B314",  # xml.etree.fromstring — trusted NCBI API source
]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits live external APIs (deselect with -m 'not integration')",
    "slow: takes more than a few seconds",
]
